# mork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  check.sh  config.cmake  rust-toolchain.toml
.github/workflows/: ci.yaml  ci.yml
os/: Cargo.toml  build.rs  linker-qemu.ld
os/mork-kernel-state/: Cargo.toml
os/mork-kernel-state/src/: lib.rs
os/src/: capability.rs  kernel_lock.rs  lang_items.rs  lib.rs  root_task.rs  trap.rs
